@@ -821,6 +821,14 @@ cairo_get_font_matrix (cairo_t *cr,
 		       cairo_matrix_t *matrix);
 
 void
+cairo_set_font_options (cairo_t                    *cr,
+			const cairo_font_options_t *options);
+
+void
+cairo_get_font_options (cairo_t              *cr,
+			cairo_font_options_t *options);
+
+void
 cairo_show_text (cairo_t *cr, const char *utf8);
 
 void
